[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = "1.25.0"
hashbrown = "0.17.1"
nalgebra = "0.35.0"
nalgebra-glm = "0.21.0"
shipyard = "0.11.3"
tracing = "0.1.44"
tracy = "0.2.0"
tracy-client = "0.18.4"
vk-mem = "0.5.0"
winit = "0.30.13"
